--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,30 @@
 /* Empty. Add your own CSS if you like */
+ion-content{
+	background: url('../img/field.jpg') center center fixed;
+}
+.container{
+	background-color:snow;
+	width:90%;
+	height:90%;
+	margin:5%;
+	opacity:0.6;
+	border-radius: 15px;	
+}
+.content{
+	color:black;
+	font-family:georgia;
+	padding:5% 10%;
+	position:fixed;
+	overflow:auto;
+	height:80%;
+}
+.nota{
+	position:fixed;
+	bottom:0px;
+	font-size:0.7rem;
+	height:2rem;
+}
+.fotos img{
+	width:100px;
+	height:100px;
+}
