--- a/www/templates/autor.html
+++ b/www/templates/autor.html
@@ -1,9 +1,16 @@
 <ion-view view-title="Author">
+
   <ion-content>
 	<div class="col text-center author-container">
 	    <h1 class="author-name">Diana Man</h1>
 	    <i class="ion-social-github author-github"><a href="https://github.com/Dianaman">Dianaman</a></i><br>
 	    <h2 ng-click="sendMail('diana.man.91@gmail.com', 'I love you', 'Your work is awesome, congratulations!	')" class="author-email">Diana.man.91@gmail.com</h2>
     </div>
+
+    <button class="button button-block button-stable" ng-click="toAudio()">
+		<i class="ion-chevron-left"></i> Audio
+	</button>
   </ion-content>
+
+	
 </ion-view>
